--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://kagawagao.github.io/blog
+url: http://kingsongao.com/blog
 root: /blog/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
