--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0"
+  },
+  "scripts": {
+    "deploy": "hexo clean && hexo gen && hexo deploy",
+    "start": "hexo server"
   }
 }
