--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://kingsongao.com/blog
-root: /blog/
+url: http://blog.kingsongao.com
+root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
   lang: zh-CN
